--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.example.kieranhall.activitytransition"
+<manifest package="com.example.kieranhall.ViewWidthAnimation"
           xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.kieranhall.ViewWidthAnimation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
