--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.kieranhall.activitytransition"
+        applicationId "com.example.kieranhall.viewwidthanimation"
         minSdkVersion 7
         targetSdkVersion 23
         versionCode 1
